# panchang-rs

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md
src/: db.rs  main.rs  routes.rs  server.rs
src/panchang/: api.rs  mod.rs  panchang.rs
