[package]
name = "panchang-rs"
version = "0.1.0"
edition = "2024"
authors = ["Chinmay Vivek <iam@chinmayvivek.com>"]
description = "A Rust implementation for calculating Hindu Astrological Calendar (Panchang)"

[dependencies]
actix-web = "4.4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }

